...
                                        version: 1,
                                    }),
                                );
                                router.push('/onboarding/personal-info');
                            }}
                        >
                            Get Started
                        </Button>
                    </View>
                </View>
            </ScrollView>
        </ScreenLayout>
    );
...
